--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -105,24 +105,24 @@
 <!--      Add a admin-->
       <div class="container p-3 modal-body add-admin">
         <div class="modal-title"><h3>Add an Admin</h3></div>
-        <form>
+        <form id="formAdmin">
           <div class="row">
             <div class="col">
               <div class="form-group">
                 <label for="add_adminId">Admin Id:</label>
-                <input type="text" class="form-control" id="add_adminId" name="add_adminId" placeholder="Example input">
+                <input type="text" class="form-control" id="add_adminId" name="add_adminId" placeholder="Admin ID" disabled>
               </div>
               <div class="form-group">
                 <label for="add_adminName">Name:</label>
-                <input type="text" class="form-control" id="add_adminName" name="add_adminName" placeholder="Example input">
+                <input type="text" class="form-control" id="add_adminName" name="add_adminName" placeholder="Name">
               </div>
               <div class="form-group">
                 <label for="add_adminusername">Username:</label>
-                <input type="text" class="form-control" id="add_adminusername" name="add_adminusername" placeholder="Example input">
+                <input type="text" class="form-control" id="add_adminusername" name="add_adminusername" placeholder="Username">
               </div>
               <div class="form-group">
                 <label for="add_adminpassword">Password:</label>
-                <input type="password" class="form-control" id="add_adminpassword" name="add_adminpassword" placeholder="Example input">
+                <input type="password" class="form-control" id="add_adminpassword" name="add_adminpassword" placeholder="Password">
               </div>
               <div class="form-group">
                 <button class="btn btn-outline-warning" type="button" id="btnSaveAdmin">Save</button>
@@ -655,6 +655,7 @@
   getAllCustomers();
   getAllDrivers();
   getAllCars();
+  getAllBooking();
 
   cusBindRowClickEvents();
   carBindRowClickEvents();
@@ -1401,7 +1402,8 @@
 
   $("#btnGetAllBookingTable").click(function (){
     getAllBooking();
-  })
+  });
+
 
   function getAllBooking(){
     $("#tblPendingBooking").empty();
@@ -1604,11 +1606,84 @@
   });
 
   $(document).on('click', '#adminProfile', function () {
-
+    generateId();
   });
 
 
+  function generateId() {
+    $.ajax({
+      url: baseURL + "admin/generateid",
+      method: 'get',
+      dataType: 'json',
+      success: function (res) {
+        $("#add_adminId").val(res.data);
+      },
+      error: function (err) {
+        let message = JSON.parse(err.responseText).message;
+        console.log("Cant Generate ID : " + message);
+      }
+    });
+  }
 
+  $("#btnSaveAdmin").click(function (){
+    var adminId = $("#add_adminId").val();
+    var adminName = $('#add_adminName').val();
+    var adminUsername = $('#add_adminusername').val();
+    var adminPassword = $('#add_adminpassword').val();
+
+    let adminLoginObj = {
+      userId: $("#add_adminId").val(),
+      userName: $("#add_adminusername").val(),
+      password: $("#add_adminpassword").val(),
+      role: "Admin"
+    }
+
+      $.ajax({
+        url: baseURL + "admin/save",
+        method: "post",
+        data: {
+          adminId: adminId,
+          adminName: adminName
+        },
+        success: function (res) {
+
+          $("#warningModal").modal();
+          $("#txtWarningHeader").text("Success");
+          $("#txtWarning").text(res.message);
+
+          $(".bd-admin-modal-lg").modal('hide');
+
+        },
+        error: function (err) {
+          let message = JSON.parse(err.responseText).message;
+          $("#warningModal").modal();
+          $("#txtWarningHeader").text("Error");
+          $("#txtWarning").text(message);
+        }
+      });
+
+
+      tempDriverUserName = $("#username").val();
+
+      $.ajax({
+        url: baseURL + "register/admin",
+        method: "post",
+        data: JSON.stringify(adminLoginObj),
+        contentType: "application/json",
+        dataType: "json",
+        success: function (res) {
+          $("#warningModal").modal();
+          $("#txtWarningHeader").text("Success");
+          $("#txtWarning").text(res.message);
+        },
+        error: function (err){
+          let message = JSON.parse(err.responseText).message;
+          $("#warningModal").modal();
+          $("#txtWarningHeader").text("Error");
+          $("#txtWarning").text(message);
+        }
+      });
+    });
 
 
 </script>
