--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -886,12 +886,18 @@
                  $("#warningModal").modal();
                  $("#txtWarningHeader").text("Success");
                  $("#txtWarning").text(res.message);
+
+                $(".bd-booking-modal-lg").modal('hide');
+
             },
             error: function (err) {
                     let message = JSON.parse(err.responseText).message;
                     $("#warningModal").modal();
                     $("#txtWarningHeader").text("Error");
                     $("#txtWarning").text(message);
+
+                $(".bd-booking-modal-lg").modal('hide');
+
                 }
             });
 
@@ -908,7 +914,7 @@
                 $("#bk_id").val(res.data);
             },
             error: function (err){
-                let message = JSON.parse(error.responseText).message;
+                let message = JSON.parse(err.responseText).message;
                 console.log("Cant Generate ID : "+message);
             }
         })
