--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -614,8 +614,7 @@
     </div>
   </div>
 </div>
-
-<!--Modal For Login Details-->
+<!--Modal For Driver Login Details-->
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content bg-dark rounded-lg">
@@ -624,11 +623,11 @@
           <p class="text-center text-warning"><Strong>Saved!</Strong><br>Now Enter Login Details</p>
           <h2 class="text-center">SignUp</h2>
           <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username" class="text-light">Username</label>
             <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp" placeholder="Username">
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password" class="text-light">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Password">
           </div>
           <button type="button" class="btn btn-warning font-weight-bold" id="btnSaveDrWithLogin" >Save</button>
@@ -1636,6 +1635,7 @@
       userName: $("#add_adminusername").val(),
       password: $("#add_adminpassword").val(),
       role: "Admin"
+
     }
 
       $.ajax({
@@ -1643,7 +1643,8 @@
         method: "post",
         data: {
           adminId: adminId,
-          adminName: adminName
+          adminName: adminName,
+          user_userName: adminUsername
         },
         success: function (res) {
 
@@ -1668,8 +1669,7 @@
       $.ajax({
         url: baseURL + "register/admin",
         method: "post",
-        data: JSON.stringify(adminLoginObj),
-        contentType: "application/json",
+        data: adminLoginObj,
         dataType: "json",
         success: function (res) {
           $("#warningModal").modal();
